
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct diff_queue_struct {int alloc; int nr; int * queue; } ;
struct diff_options {int format_callback_data; int (* format_callback ) (struct diff_queue_struct*,struct diff_options*,int ) ;} ;
struct diff_filepair {int dummy; } ;
struct combine_diff_path {struct combine_diff_path* next; } ;


 int combined_pair (struct combine_diff_path*,int) ;
 int free (int *) ;
 int free_combined_pair (int ) ;
 int stub1 (struct diff_queue_struct*,struct diff_options*,int ) ;
 int * xcalloc (int,int) ;

__attribute__((used)) static void handle_combined_callback(struct diff_options *opt,
         struct combine_diff_path *paths,
         int num_parent,
         int num_paths)
{
 struct combine_diff_path *p;
 struct diff_queue_struct q;
 int i;

 q.queue = xcalloc(num_paths, sizeof(struct diff_filepair *));
 q.alloc = num_paths;
 q.nr = num_paths;
 for (i = 0, p = paths; p; p = p->next)
  q.queue[i++] = combined_pair(p, num_parent);
 opt->format_callback(&q, opt, opt->format_callback_data);
 for (i = 0; i < num_paths; i++)
  free_combined_pair(q.queue[i]);
 free(q.queue);
}
